# shoutcaster

./: README.md  cv.py  llm.py  main.py  pyproject.toml  requirements.txt  tts.py
