[tool.poetry]
name = "shoutcaster"
version = "0.1.0"
description = "AI-powered Valorant shoutcaster pipeline"
authors = ["Luca Rijneveld <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

accelerate = "1.10.1"
anyio = "4.11.0"
bitsandbytes = "0.47.0"
build = "1.3.0"
CacheControl = "0.14.3"
certifi = "2025.8.3"
"charset-normalizer" = "3.4.3"
cleo = "2.1.0"
click = "8.1.8"
colorama = "0.4.6"
contourpy = "1.3.3"
crashtest = "0.4.1"
cycler = "0.12.1"
decorator = "4.4.2"
distlib = "0.4.0"
dulwich = "0.24.2"
fastjsonschema = "2.21.2"
filelock = "3.19.1"
findpython = "0.7.0"
fonttools = "4.59.2"
fsspec = "2025.9.0"
gTTS = "2.5.4"
h11 = "0.16.0"
hf-xet = "1.1.10"
httpcore = "1.0.9"
httpx = "0.28.1"
huggingface-hub = "0.35.1"
idna = "3.10"
imageio = "2.37.0"
"imageio-ffmpeg" = "0.6.0"
inquirerpy = "0.3.4"
installer = "0.7.0"
"jaraco.classes" = "3.4.0"
"jaraco.context" = "6.0.1"
"jaraco.functools" = "4.3.0"
Jinja2 = "3.1.6"
keyring = "25.6.0"
kiwisolver = "1.4.9"
MarkupSafe = "3.0.2"
matplotlib = "3.10.6"
more-itertools = "10.8.0"
moviepy = "1.0.3"
mpmath = "1.3.0"
msgpack = "1.1.2"
networkx = "3.5"
numpy = "2.2.6"
opencv-python = "4.12.0.88"
packaging = "25.0"
pbs-installer = "2025.10.7"
pfzy = "0.3.4"
pillow = "11.3.0"
pip = "25.2"
pkginfo = "1.12.1.2"
platformdirs = "4.5.0"
poetry = "2.2.1"
poetry-core = "2.2.1"
polars = "1.33.1"
proglog = "0.1.12"
prompt_toolkit = "3.0.52"
psutil = "7.0.0"
pyparsing = "3.2.3"
pyproject_hooks = "1.2.0"
"python-dateutil" = "2.9.0.post0"
python-dotenv = "1.1.1"
"pywin32-ctypes" = "0.2.3"
PyYAML = "6.0.2"
RapidFuzz = "3.14.1"
regex = "2025.9.18"
requests = "2.32.5"
"requests-toolbelt" = "1.0.0"
safetensors = "0.6.2"
scipy = "1.16.2"
setuptools = "78.1.1"
shellingham = "1.5.4"
six = "1.17.0"
sniffio = "1.3.1"
sympy = "1.14.0"
tokenizers = "0.22.1"
tomlkit = "0.13.3"
torch = "2.8.0"
torchvision = "0.23.0"
torchaudio = "2.8.0"
tqdm = "4.67.1"
transformers = "4.56.2"
"trove-classifiers" = "2025.9.11.17"
typing_extensions = "4.15.0"
ultralytics = "8.3.203"
"ultralytics-thop" = "2.0.17"
urllib3 = "2.5.0"
virtualenv = "20.35.1"
wcwidth = "0.2.14"
wheel = "0.45.1"
zstandard = "0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
